<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@drawable/bg"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:padding="30dip"
	android:orientation="vertical">
	<LinearLayout
		android:orientation="vertical"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_gravity="center">
	
		<TextView
			android:text="@string/main_title"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_gravity="center"
			android:layout_marginBottom="25dip"
			android:textSize="32sp"
			android:textColor="#aaaaaa"
			android:textStyle="bold" />
		<Button
			android:id="@+id/map_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/map_label" 
			android:textColor="#ffffff"/>
		<Button
			android:id="@+id/alert_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/alert_label" 
			android:textColor="#ffffff"/>
		<Button
			android:id="@+id/about_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/about_label" 
			android:textColor="#ffffff"/>
		<Button
			android:id="@+id/exit_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/exit_label" 
			android:textColor="#ffffff"/>
	</LinearLayout>
</LinearLayout>
